# lgtm

./: .gitignore  Cargo.toml  LICENSE  README.md  hatch_build.py  pyproject.toml
.github/workflows/: build.yml
rust/snake/: Cargo.toml
rust/snake/src/: main.rs
src/lgtm/: app.py  cli.py  title.py  title.tcss
src/lgtm/screens/: choice.py  title.py  title.tcss
src/lgtm/widgets/: typing_text.py
