[project]
name = "lgtm"
version = "0.1.0"
description = "A CYOA game."
requires-python = ">=3.13"
readme = "README.md"
license = { file = "LICENSE" }
dependencies = [
    "pyfiglet>=1.0.4",
    "textual>=8.0.1",
]

[project.scripts]
lgtm = "lgtm.app:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/lgtm"]
artifacts = ["src/lgtm/bin/*"]

[tool.hatch.build.hooks.custom]

[dependency-groups]
dev = [
    "textual-dev>=1.8.0",
    "hatchling",
]
